compiler/tests/fa/errors/reserved_word.salam
// زبان: فارسی
// انتظار: رزرو
تابع و():
    بازگشت ۰
پایان
